@@ -1,6 +1,7 @@
 from django.utils.functional import cached_property
 
 from wagtail.wagtailcore.blocks import ChooserBlock
+from .shortcuts import get_rendition_or_not_found
 
 
 class ImageChooserBlock(ChooserBlock):
@@ -16,6 +17,6 @@ class ImageChooserBlock(ChooserBlock):
 
     def render_basic(self, value):
         if value:
-            return value.get_rendition('original').img_tag()
+            return get_rendition_or_not_found(value, 'original').img_tag()
         else:
             return ''
